<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drawing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="alert">Alert</string>
    <string name="give_name_to_color">Give a name to your color</string>
	<string name="color_name">Color Name</string>
    <string name="save">Save</string>
    <string name="please_enter_name">Please enter a color name</string>
    <string name="crash_toast_text">Crash</string>
    
    
    
    
    
    <string name="pen_stats">Pen Stats</string>
    <string name="color_library">Color Library</string>
    <string name="color_capture">Color Capture</string>
    <string name="color_matching">Color Matching</string>
    <string name="draw">Draw</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="pen_status">Pen Status</string>
    <string name="battery_life">Battery Life</string>
    <string name="no_colors">You have no saved colors</string>
    <string name="match_1">MATCH 1</string>
    <string name="match_2">MATCH 2</string>
    <string name="match_3">MATCH 3</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="color_value">Color Value</string>
    <string name="rgb">RGB</string>
    <string name="hex">HEX</string>
    <string name="cmyk">CMYK</string>
    <string name="favorites">Favorited Colors</string>
    <string name="edit_color">Edit Color</string>
    <string name="from_libray">From Library</string>
    <string name="from_color_capture">From Color Capture</string>
    <string name="select_color">Select Color</string>
    <string name="save_message">Would you like to save your current drawing to the drawing library?</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="geolocation_title">Geolocation tagging of saved colors</string>
    <string name="battery_level">Battery Level</string>
    <string name="memory_level">Memory Level</string>
    <string name="display_color_title">Display color titles in color library</string>
    <string name="send_feedback">Send feedback</string>
    <string name="no_drawings">You have no saved drawings</string>
    <string name="select_drawing">Select drawing to open</string>
    
    
    
    
    
    
    <color name="drawerback">#806659da</color>
    <color name="color_white">#ffffff</color>
    <color name="ldrawer_color">#666666</color>
    <color name="color_yellow">#80F0B20F</color>
    <color name="purple">#673ab7</color>
    <color name="color_lightgrey">#C8C8C8</color>
    <color name="color_textcolor">#7165DD</color>
    <color name="background_material_dark">#ff303030</color>
    
    
    <color name="color_menubar">#20b2aa</color>
    <color name="color_blue">#2796e8</color>
    <color name="color_pink">#ec627d</color>
    <color name="color_lightblue">#985bbb</color>
    <color name="color_grey">#999999</color>
    <color name="color_greydark">#555555</color>
    <color name="color_lightlightblue">#00ffff</color>
    <color name="color_orange">#f38d6d</color>
    <color name="color_lightlightgrey">#e8e8e8</color>
    <color name="color_tlightgrey">#70C8C8C8</color>
    <color name="color_twhite">#70ffffff</color>
    <color name="color_black">#000000</color>
    <color name="color_red">#ff0000</color>
    <color name="color_green">#00ff00</color>

    <color name="color_blueback">#4F81BD</color>
    <color name="color_bluestroke">#385D8A</color>
    <color name="color_greenplus">#9BBB59</color>
    <color name="color_greenstroke">#71893F</color>

    <color name="greenStart">#ff33dd44</color>
    <color name="greenMid">#ff0A8815</color>
    <color name="greenEnd">#ff1da130</color>
    <color name="color_lightlightwhite">#eeeeee</color>
    
    <color name= "back">#F4F3F4</color>
    <color name= "grayfontcolor">#9A9A9A</color>
    
    <color name="white_transparent_50_percent">#85ffffff</color>
    
    
    
    

</resources>
