<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/dividor"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/darker_gray"
            android:orientation="vertical" >

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2" >
			
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical" 
                android:layout_weight="1"
                android:weightSum="3">

				<LinearLayout
				    android:id="@+id/layoutPreviewActionbar"
				    android:layout_width="match_parent"
				    android:layout_height="50dp"
				    android:background="@color/color_white"
				    android:gravity="center"
				    android:orientation="horizontal" >

					<ImageView
					    android:id="@+id/imgPreviewBack"
					    android:layout_width="20dp"
					    android:layout_height="match_parent"
					    android:src="@drawable/abc_ic_ab_back_holo_light" />
			
			    <RelativeLayout
			        		  
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:layout_weight="1" >
			
			        <TextView
			            android:id="@+id/txtPreviewTitle"
			            android:layout_width="match_parent"
			            android:layout_height="match_parent"
			            android:gravity="center_vertical"
			            android:text="Home"
			            android:textColor="@color/color_textcolor" />
			
			    </RelativeLayout>
			
			     
			        
			</LinearLayout>
                <ImageView
                    android:id="@+id/color_preview_circle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:padding="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_blank_circle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/color_preview_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Medium Text"
                        android:drawablePadding="2dp"
                        android:drawableLeft="@drawable/ic_communication_location_on"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/color_preview_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Medium Text"
                        android:drawablePadding="2dp"
                        android:drawableLeft="@drawable/ic_action_schedule"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/color_value"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/color_textcolor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="3" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp" >

                        <TextView
                            android:id="@+id/TextView01"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rgb"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/color_preview_rgb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="Medium Text"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp" >

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hex"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/color_preview_hex"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Medium Text"
                            android:gravity="right"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp" >

                        <TextView
                            android:id="@+id/TextView03"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cmyk"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/color_preview_cmyk"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="Medium Text"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>
                    
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp" >

                        <TextView
                            android:id="@+id/TextView03"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="LAB"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/color_preview_lab"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="Medium Text"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
            
        </LinearLayout>

    </FrameLayout>

</LinearLayout>
